fixes on mobile

--- a/src/styles/content/components/forms.scss
+++ b/src/styles/content/components/forms.scss
@@ -56,6 +56,8 @@
 
   &__svg {
     opacity: 0;
+    width: 100%;
+    height: 100%;
     // transition: $transition;
   }
 }
